--- a/src/styles/components/TabList.scss
+++ b/src/styles/components/TabList.scss
@@ -2,6 +2,13 @@
 @use "sass:color";
 
 .tab-list {
+  width: 100%;
+  height: 87dvh;
+
+  // Mobile: full height para que el contenido pueda hacer scroll
+  @media (min-width: "md") {
+    width: unset;
+  }
 
   &__item {
 
@@ -42,6 +49,11 @@
     &--content {
       font-family: var(--font-family-notes, var(--font-family-default));
       font-weight: normal;
+      height: 100%;
+
+      @media (min-width: 768px) {
+        height: unset;
+      }
 
       &::-webkit-scrollbar {
         width: var(--tn-padding-base);
